--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -5,10 +5,18 @@
     <h3><%= @restaurant.address %></h3>
     <h3><%= @restaurant.phone_number %></h3>
     <p><%= @restaurant.category %></p>
-    <p><%= @restaurant.review.content %></p>
-    <p><%= @restaurant.category %></p>
 
-    <%= link_to "Delete", restaurant_path(@restaurant),
+    <% @restaurant.reviews.each do |review| %>
+      <br>
+      <p><%= review.content %><p>
+      <p><%= review.rating %><p>
+    <% end %>
+
+
+    <%= link_to "Delete the restaurant", restaurant_path(@restaurant),class: "btn btn-primary",
       method: :delete,
       data: { confirm: "Are you sure?" } %>
 
+     <%= link_to "Add a Review", new_restaurant_review_path(@restaurant), class: "btn btn-primary" %>
+
+    <%= link_to "Return", restaurants_path(@restaurant),class: "btn btn-primary"%>
