--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -7,10 +7,14 @@
     <%= link_to "See details", restaurant_path(restaurant), class: "btn btn-primary"%>
     <%= link_to "Delete", restaurant_path(restaurant), class: "btn btn-primary",
       method: :delete,
-      data: { confirm: "Are you sure?" }
-      %>
+      data: { confirm: "Are you sure?" } %>
+
   </ul>
 <% end %>
 
+  <ul>
+  <%= link_to "Add a New Restaurant", new_restaurant_path(@restaurant),class: "btn btn-primary"%>
 
+
+  </ul>
 
